Fixed notification positioning on mobile and added new words

--- a/styles.css
+++ b/styles.css
@@ -169,8 +169,16 @@
     padding: 20px;
     border-radius: 10px;
     font-size: 2em;
-    opacity: 1;
+    opacity: 0.7;
     transition: opacity 1s ease-out;
+}
+
+@media (min-height: 839px) {
+    .notification {
+        font-size: 1.5em;
+        top: 40%;
+    }
+    
 }
 
 .notification.correct {
